# Eirbot_2026

./: .gitignore  Dockerfile  README.md  eurobot_map.py  frames_2026-03-18_10.06.55.gv  frames_2026-04-09_07.52.48.gv  frames_2026-05-08_14.24.45.gv  justfile  pixi.toml  ros_entrypoint.sh  start_robot.sh
.devcontainer/: Dockerfile  devcontainer.json
src/diffbot_control/: CMakeLists.txt  package.xml  setup.py
src/diffbot_control/diffbot_control/: diff_drive_node.py  esc_driver.py  esp_driver.py
src/diffbot_description/: CMakeLists.txt  package.xml
src/diffbot_description/launch/: sim.launch.py
src/diffbot_description/urdf/: diffbot.urdf
src/diffbot_navigation/: CMakeLists.txt  package.xml
src/diffbot_navigation/config/: nav2_params.yaml  navigate_to_pose.xml
src/diffbot_navigation/launch/: navigation.launch.py
src/diffbot_navigation/maps/: eurobot_table.pgm  eurobot_table.yaml
src/diffdrive_arduino-humble/: CMakeLists.txt  diffdrive_arduino.xml  package.xml
src/diffdrive_arduino-humble/bringup/config/: diffbot_controllers.yaml
src/diffdrive_arduino-humble/bringup/launch/: diffbot.launch.py
src/diffdrive_arduino-humble/description/launch/: view_robot.launch.py
src/diffdrive_arduino-humble/description/ros2_control/: diffbot.ros2_control.xacro
src/diffdrive_arduino-humble/description/rviz/: diffbot.rviz
src/diffdrive_arduino-humble/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
src/diffdrive_arduino-humble/hardware/: diffbot_system.cpp
src/diffdrive_arduino-humble/hardware/include/diffdrive_arduino/: diffbot_system.hpp
src/eirbot2026/: CMakeLists.txt  eirbot2026.xml  package.xml  setup.cfg  setup.py
src/eirbot2026/config/: controllers.yaml
src/eirbot2026/eirbot2026/: strategy_node.py
src/eirbot2026/launch/: eirbot2026.launch.py
src/eirbot2026/rviz/: display.rviz
src/eirbot2026/urdf/: eirbot2026.urdf.xacro
src/eirbot_actions/: CMakeLists.txt  package.xml
src/eirbot_actions/eirbot_actions/: push_server.py  push_serveru.py
src/eirbot_actions/src/: push_action_bt_node.cpp
src/eirbot_base/: CMakeLists.txt  eirbot_base.xml  package.xml
src/eirbot_base/config/: eirbot_base_controllers.yaml
src/eirbot_base/description/ros2_control/: robot.ros2_control.xacro
src/eirbot_base/description/rviz/: diffbot.rviz
src/eirbot_base/description/urdf/: eirbot_base.urdf.xacro  robot_description.urdf.xacro
src/eirbot_base/hardware/: eirbot_base.cpp
src/eirbot_base/hardware/include/eirbot_base/: eirbot_base.hpp
src/eirbot_base/launch/: eirbot_base.launch.py
src/eirbot_bringup/: package.xml  setup.cfg  setup.py
src/eirbot_bringup/launch/: eirbot.launch.py  rasp.launch.py  rasp.py
src/eirbot_interfaces/: CMakeLists.txt  package.xml
src/eirbot_interfaces/action/: Push.action
src/eirbot_localization/: package.xml  setup.cfg  setup.py
src/eirbot_localization/config/: bringup.launch.py  eirbot.rviz  ekf.yaml
src/eirbot_localization/eirbot_localization/: pose_broadcaster.py  push_action_node.py  set_init_pose.py
src/eirbot_localization/launch/: bringup.launch.py  localization.launch.py
src/eirbot_main/: package.xml  setup.cfg  setup.py
src/eirbot_main/eirbot_main/: homologation.py  mission_manager.py
src/eirbot_navigation/: CMakeLists.txt  package.xml
src/eirbot_navigation/config/: nav2_params.yaml  navigate_to_pose.xml  twist_mux.yaml  virtual_layer_forms.yaml
src/eirbot_navigation/launch/: navigation.launch.py
src/eirbot_navigation/maps/: eurobot_table.yaml
src/eirbot_safety/: CMakeLists.txt  package.xml
src/eirbot_safety/include/eirbot_safety/: safety_node.hpp
src/eirbot_safety/src/: safety_node.cpp
